# set_up

./: .clinerules  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  agent.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  slack_listener.py  test_authentication.py  test_docs_client.py  test_drive_client.py  test_gmail_client.py  test_sheets_client.py  test_slack_connection.py
.github/workflows/: ci.yml  ci_cd.yml
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  README.md  conf.py  index.rst  requirements.txt
docs/components/agent/: README.md
docs/components/slack_connector/: README.md
docs/services/: index.rst
examples/: README.md  workflow_example.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/google_workspace_agent/: auth.py  auth_cli.py  calendar_client.py  docs_client.py  drive_client.py  gmail_client.py  integration.py  llm_client.py  service_client.py  sheets_client.py
tests/: test_auth.py  test_calendar_client.py  test_docs_client.py  test_drive_client.py  test_gmail_client.py  test_integration.py  test_llm_client.py  test_sheets_client.py
